--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,7 +6,7 @@ on: [push]
 
 jobs:
   build:
-
+    needs: build
     runs-on: ubuntu-latest
 
     steps:
@@ -20,7 +20,11 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
+    - uses: actions/download-artifact@main
+      with:
+        name: webpack artifacts
+        path: public
+    - name: npm install, and test
       matrix:
         os: [ubuntu-latest, windows-2016]
       - uses: actions/upload-artifact@master
